Support enablePreview in DSL